- Fixed Layout Bugs i introduced

--- a/sass/controls/_grid.scss
+++ b/sass/controls/_grid.scss
@@ -19,9 +19,9 @@ $gutter-neg-size: -20px;
     margin-bottom: 30px;
   }
 
-  &.l-center {
-    max-width: 1060px;
-    padding-left: 20px;
+  &.offset-two {
+    max-width: 1160px;
+    padding-left: 40px;
   }
 
   &.align-to-title {
