--- a/sass/controls/_tabs.scss
+++ b/sass/controls/_tabs.scss
@@ -60,16 +60,6 @@
     }
   }
 
-  + .tab-panel.alternate {
-    position: relative;
-    top: -50px;
-  }
-
-  &.alternate {
-    position: relative;
-    top: -50px;
-  }
-
   > .busy-indicator-container {
     @include font-size(14);
   }
